# studio-custom-names

./: .gitignore  README.md  id_rename.weiredformat  install.py  log.txt  main.py  part_rename.weiredformat  pyproject.toml  rename_parts.py  requirements.txt
.github/workflows/: build-installer.yml
installer/: install.bat  install.py
rules/: Achsen.regex.rules  Beams.regex.rules  Exceptions.id.rules  Misc.id.rules  ModBeams.id.rules  ModBeams.regex.rules  Other.id.rules  PinsAndAxleMods.id.rules  PinsAndAxleMods.regex.rules  Specialteile.id.rules  Zahnraeder.id.rules
